[tool.poetry]
name = "ideal-pancake"
version = "0.1.0"
description = ""
authors = ["s0lvang <august.s.solvang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.7,<3.9"
numpy = "^1.19.2"
pandas = "^1.1.2"
matplotlib = "^3.3.2"
sklearn = "^0.0"
statsmodels = "^0.12.0"
arch = "^4.15"
xlrd = "^1.2.0"
scikit-learn = "^0.23.2"
scikit-plot = "*"
tensorflow = "^2.2.0"
google-api-python-client = "*"
six = "^1.13.0"
google-cloud-storage = "^1.32.0"
tsfresh = "^0.18.0"
scipy = "^1.4.0"
google-cloud-core = "^1.4.3"
Keras = "^2.4.3"
opencv-python = "^4.4.0"
PyWavelets = "^1.1.1"
comet-ml = "^3.3.2"
hmmlearn = "^0.2.5"
ray = {extras = ["tune"], version = "^1.2.0"}
tune-sklearn = "^0.2.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = {version="*", allow-prereleases=true}

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
ignore = "E111"
